Remove uses of String#formatted for J8 compat